ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-12-04 Benedikt Heintel
	- GUI:
		* Fixed two small bugs

2009-12-05 Laurent Declercq
	- GUI:
		* Added new admin settings for the domain names / subdomains validation
		* Added new routines for ACE labels check (Todo: added ASCII range check)
		* Fixed somes issues related to Rfc 3490:
			- Hyphens are now banned in 2nd and 3rd position of input string
			- ACE labels are no longer allowed as input string

2009-12-04 Benedikt Heintel
	- ENGINE:
		* Fixed #2080: Re-enable domains works not properly
	- TOOLS:
		* Updated PHPmyAdmin to version 3.2.4
		* Updated SquirrelMail Plugins add_address and compatibility

2009-11-28 Benedikt Heintel
	- LANGUAGES:
		* Added: Arabic

2009-11-27 Benedikt Heintel
	- GUI:
		* Fixed #2077: Files in GUI is absent
	- TOOLS:
		* Fixed Error in Filemanager

2009-11-27 Henrik Schytte
	- GUI:
		* Added new Icons
		* Added three links to system tools on the login page

2009-11-27 Henrik Schytte
	- GUI:
		* Graphical adjustments

2009-11-26 Laurent Declercq
	- GUI:
		* Fixed #2041: Internationalized domain name - unable to sets a subdomain as Idna label
		* New routines for the validation of mount points and usernames - The function that checks the mount point should not use the routines related to the validation of user names
		* Fixed #2076: Login - unable to login with Idna customer domain name

2009-11-26 Benedikt Heintel
	- ENGINE:
		* Fixed #2074: Wrong count for mail accounting in dovecot

2009-11-21 Benedikt Heintel
	- DISTS:
		* Fixed #2069: [gentoo] /etc/init.d/ispcp_daemon patch
	- ENGINE:
		* Fixed: Use of uninitialized value in pattern match (m//) at /var/www/ispcp/engine/quota/ispcp-dsk-quota

2009-11-21 Laurent Declercq
	- SETUP:
		* Check of email address: Application of RFCs 2822, 952 and 1123
	- GUI
		* Fixed: Directories chooser does not working ('Use of undefined constant VFS_TYPE_DIR')