@@ -1,7 +1,11 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-2009-12-04 Benedikt Heintel
+2009-12-06 Laurent Declercq
+	-GUI:
+		* Fixed #2085: Call to undefined function chk_dname()
+
+2009-12-05 Benedikt Heintel
 	- GUI:
 		* Fixed two small bugs
 
